--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "express": "^4.14.1",
     "react": "^15.4.2",
     "react-bootstrap": "^0.30.7",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "react-router": "^3.0.2"
   },
   "devDependencies": {
     "babel-cli": "^6.23.0",
